# standard-model-frontend

./: .gitignore  Cargo.toml  README.md  index.html  index.scss
data/: author.csv  particles.csv
src/: content.rs  lib.rs  main.rs
src/pages/: about.rs  home.rs  mod.rs  page_not_found.rs  particles.rs
src/pages/home/: home.rs  mod.rs  particles.rs
src/utils/: csv.rs
