[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "Frontend service for Standard Model Project"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"]  }
log = "0.4"
wasm-logger = "0.2"
gloo = "0.8"
web-sys = "0.3.60"
js-sys = "0.3.60"
chrono = { version = "0.4.23", features = ["serde"] }
serde-wasm-bindgen = "0.4"
csv = "1.2.1"
